fixed overflow issue

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -7,7 +7,7 @@ body {
   position: relative;
   overflow: auto;
   display: inline-block;
-  overflow: hidden;
+  // overflow: hidden;
   // padding: 30px;
 }
 
